# previa

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.artifact  Dockerfile.kubernetes-plugin  Dockerfile.runner  PROJECT.md  README.md  previa-compose.yaml  release-metadata.json
.agents/plugins/: marketplace.json
.github/workflows/: ci.yaml  kubernetes-plugin.yaml
app/: vite.config.ts
app/dev-dist/: sw.js
app/public/: sw.js
app/src/: App.tsx  vite-env.d.ts
app/src/components/: AIPipelineChat.tsx  AgentRuntimeOnboarding.tsx  AppHeader.test.tsx  AppHeader.tsx  AppShell.test.tsx  AppShell.tsx  AuthGate.tsx  ContextSwitcher.test.tsx  ContextSwitcher.tsx  LoadProvisioningStatusPanel.tsx  LoadTestConfigPanel.test.tsx  LoadTestConfigPanel.tsx  LoadTestResultsPanel.test.tsx  LoadTestResultsPanel.tsx  LoadTestRunHistoryItem.tsx  LoadTestTab.test.tsx  LoadTestTab.tsx  OnboardingModal.tsx  PipelineDocsPanel.tsx  PipelineListItem.tsx  PipelineSharingDialog.tsx  ProjectCard.tsx  ProjectEnvGroupsPanel.test.tsx  ProjectEnvGroupsPanel.tsx  ProjectSettingsDialog.test.tsx  ProjectSettingsDialog.tsx  ProjectSharingDialog.tsx  ProjectTagsDialog.test.tsx  ProjectTagsDialog.tsx  ProjectsSqliteExportDialog.test.tsx  ProjectsSqliteExportDialog.tsx  RunHistoryPanel.tsx  StepCreatorPanel.tsx  StepResultCard.test.tsx  StepResultCard.tsx  TestModeSidebar.test.tsx  TestModeSidebar.tsx  TryItDrawer.tsx
app/src/lib/: api-base.test.ts  api-base.ts  api-client.test.ts  api-client.ts  (+23 more)
charts/previa/: Chart.yaml  values.yaml
docs/previa/: README.md  access-management.md  api-workflows.md  architecture.md  cli-commands.md  compose.md  end-to-end-walkthrough.md  examples-cookbook.md  faq.md  getting-started.md  glossary.md  import-export.md  kubernetes-plugin.md  kubernetes-production-helm.md  main-runner-auth.md  mcp.md  minimal-happy-path.md  operations-cheatsheet.md  operations.md  pipeline-export.md  pipeline-import.md  postgres-execution-queue.md  project-repository-workflow.md  remote-runners.md  security.md  troubleshooting.md  wave-load-tests.md
docs/specs/: previa-v1.md
engine/: README.md
engine/src/: extractions.rs  lib.rs
fixtures/: local-load-target.previa.yaml
kubernetes-plugin/: Cargo.toml
kubernetes-plugin/src/: main.rs  models.rs  routes.rs
kubernetes-plugin/src/services/: config.rs  kubernetes.rs  mod.rs  persistence.rs  reconciler.rs  reservations.rs  runner_health.rs  runner_resources.rs
load-target/: Cargo.toml
load-target/src/: main.rs
main/: Cargo.toml  README.md  build.rs
main/migrations/: 202605070001_add_project_tags.sql  202605250001_add_project_sharing.sql
main/migrations/postgres/: 202605010001_add_env_groups.sql  202605070001_add_project_tags.sql  202605130002_add_access_management.sql  202605230001_add_pipeline_sharing.sql  202605250001_add_project_sharing.sql  202607170001_add_execution_queue.sql  202607170002_add_execution_queue_functions.sql
main/migrations/sqlite/: 202605010001_add_env_groups.sql  202605130002_add_access_management.sql  202605230001_add_pipeline_sharing.sql
main/src/: main.rs
main/src/server/: docs.rs  errors.rs  mod.rs  models.rs  state.rs  utils.rs
main/src/server/auth/: config.rs  mod.rs  passwords.rs  permissions.rs  tokens.rs
main/src/server/db/: api_tokens.rs  e2e_queues.rs  env_groups.rs  mod.rs  pipeline_shares.rs  pipelines.rs  pool.rs  project_shares.rs  projects.rs  runner_reservations.rs  transfers.rs  users.rs
main/src/server/execution/: e2e.rs  e2e_queue.rs  history_capture.rs  load.rs  load_batch.rs  mod.rs  node_plan.rs  runtime_specs.rs
main/src/server/handlers/: api_tokens.rs  auth.rs  env_groups.rs  executions.rs  health.rs  history_e2e.rs  history_load.rs  mod.rs  pipelines.rs  projects.rs  runner_reservations.rs  specs.rs  tests_e2e.rs  tests_e2e_queue.rs  tests_load.rs  transfers.rs  users.rs
main/src/server/mcp/: models.rs  service.rs
main/src/server/middleware/: auth.rs
main/src/server/queue/: config.rs  dispatcher.rs  mod.rs  models.rs  projector.rs  repository.rs  retention.rs
main/src/server/services/: e2e_rerun.rs  kubernetes_reservations.rs  mod.rs  pipeline_access.rs  pipeline_import.rs  pipeline_runtime.rs  project_access.rs  runner_capacity.rs  sqlite_transfer.rs
main/src/server/validation/: env_groups.rs  mod.rs  pipelines.rs
main/tests/: postgres_queue.rs  postgres_queue_e2e.rs  postgres_queue_load.rs  postgres_queue_recovery.rs
main/tests/common/: mod.rs
previa/src/: auth.rs  browser.rs  cli.rs  compose.rs  config.rs  diagnostics.rs  download.rs  envfile.rs  export.rs  lib.rs  local_push.rs  mcp_cli.rs  paths.rs  pipeline_import.rs  process.rs  runner_cli.rs  runtime.rs
previa/tests/: cli.rs
runner/: Cargo.toml  README.md
runner/src/: lib.rs  main.rs  queue.rs
runner/src/server/: docs.rs  errors.rs  load_bucket.rs  load_dispatch.rs  load_execution.rs  load_wave.rs  metrics.rs  mod.rs  models.rs  reservation.rs  runtime.rs  sse.rs  state.rs  wave_dispatcher.rs  wave_emitter.rs  wave_executor.rs  wave_metrics_actor.rs  wave_scheduler.rs  wave_sender.rs
runner/src/server/handlers/: e2e.rs  load.rs  system.rs
runner/src/server/middleware/: transaction.rs
runner/src/server/queue/: classic_load.rs  config.rs  e2e_executor.rs  event_buffer.rs  heartbeat.rs  load_executor.rs  mod.rs  models.rs  repository.rs  worker.rs
scripts/: check_openapi_client_contract.py  start-local-load-target-stack.sh
target-linux-amd64/: .rustc_info.json
(+274 files in other folders)
