[workspace]
resolver = "3"
members = ['engine', 'main', 'previa', 'runner', 'load-target']

[workspace.package]
version = "1.0.0-alpha.21"
edition = "2024"
rust-version = "1.90.0"
authors = ["Previa Labs <previa@runvibe.dev>"]
license = "MIT"
repository = "https://github.com/runvibe/previa"
homepage = "https://github.com/runvibe/previa"

[workspace.dependencies]
# internal
previa-engine = { path = "engine", version = "1.0.0-alpha" }
previa-runner = { path = "runner", version = "1.0.0-alpha" }

# external
axum = "0.8"
rand = "0.10.0"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
uuid = { version = "1.22.0", features = ["v4", "v7"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
    "stream",
] }
serde_yaml = "0.9"
