[package]
name = "previa-kubernetes-plugin"
description = "AWS Karpenter runner reservation plugin for Previa."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
futures = "0.3"
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.98", features = ["client", "runtime", "derive"] }
reqwest = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
