[package]
name = "previa-runner"
description = "API for remote execution of integration and load tests via HTTP streaming (SSE)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
axum = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
http-body-util = "0.1"
previa-engine = { workspace = true }
futures-util = "0.3"
reqwest = { workspace = true }
sysinfo = "0.38.3"

[dev-dependencies]
httpmock = "0.8.3"
tower = { version = "0.5", features = ["util"] }
